[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "incident-response-ai"
version = "1.0.0"
description = "AI Incident Response Environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core"
]

[project.scripts]
server = "server.app:main"
